<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@color/clrprimary"
    tools:context=".LoginActivity">



        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textColor="@color/clriconst"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_marginStart="150dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/description_wel"
            app:srcCompat="@drawable/profile" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clrcard"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txtvuser"
            android:textColor="@color/clriconst"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:background="@color/clrbackedit"
            android:ems="15"
            android:inputType="textEmailAddress"
            android:hint="@string/txteuser"
            android:textColorHint="@color/clriconst"
            android:textColor="@color/clriconst" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txtvpwd"
            android:textColor="@color/clriconst"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:background="@color/clrbackedit"
            android:ems="15"
            android:inputType="textPassword"
            android:hint="@string/txtepwd"
            android:textColorHint="@color/clriconst"
            android:textColor="@color/clriconst" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="@color/clrprimary"
            android:onClick="iniciarSesion"
            android:text="@string/button"
            android:textColor="@color/clriconst"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="90dp"
            android:autoLink="web"
            android:text="@string/txtvforget"
            android:textColor="@color/clriconst"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="55dp"
            android:text="@string/txtvremember"
            android:textColor="@color/clriconst"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>